force-app/main/default/objects/ViolationType/ViolationType.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>