force-app/main/default/objects/ViolationType/fields/Decision_Type_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Type_Expiry_Date__c</fullName>
    <label>Decision Type Expiry Date</label>
    <type>Date</type>
</CustomField>