force-app/main/default/objects/ViolationType/fields/Default_Star_Rating_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Star_Rating_Value__c</fullName>
    <label>Default Star Rating Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Star</fullName>
            </value>
            <value>
                <fullName>2 Star</fullName>
            </value>
            <value>
                <fullName>3 Star</fullName>
            </value>
            <value>
                <fullName>4 Star</fullName>
            </value>
            <value>
                <fullName>5 Star</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>