force-app/main/default/objects/ViolationType/fields/RegDecTypeExtId__c.field-meta.xml
<CustomField>
    <fullName>RegDecTypeExtId__c</fullName>
    <externalId>true</externalId>
    <label>RegDecisiontype ext Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>