force-app/main/default/objects/ViolationType/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name</columns>
    <columns>Type</columns>
    <columns>Severity</columns>
    <columns>Decision_Type_Effective_Date__c</columns>
    <columns>Decision_Type_Expiry_Date__c</columns>
    <columns>Service_Compliance_Rating_Effect__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>